--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "code"]
 	path = code
 	url = https://github.com/pitfail/pitfail-demo
+[submodule "reports-src"]
+	path = reports-src
+	url = https://github.com/pitfail/pitfail-reports
